--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,35 +1,79 @@
-Ignore node_modules directory
-
+# Node.js
 node_modules/
+npm-debug.log
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
 
-Ignore log files
+# Go
+/bin/
+/pkg/
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+go.work
+go.sum
 
-logs .log npm-debug.log yarn-debug.log* yarn-error.log*
+# gRPC generated files
+*.pb.go
+*.pb.gw.go
 
-Ignore environment files
+# Environment files
+.env
+.env.*
+!.env.example
 
-.env .env.test .env.production .env.development .env.local .env.*.local
+# Build and distribution
+dist/
+build/
+out/
 
-Ignore build artifacts
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
 
-dist/ build/
+# Test and coverage
+coverage/
+.nyc_output/
+*.test
+*.out
 
-Ignore coverage reports
-
-coverage/ .nyc_output/
-
-Ignore IDE and editor files
-
-.vscode/ .idea/ *.swp *.swo
-
-Ignore macOS files
-
+# OS specific files
+# macOS
 .DS_Store
+.AppleDouble
+.LSOverride
 
-Ignore Windows files
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-Thumbs.db ehthumbs.db
+# Linux
+*~
 
-Ignore other common files
+# Temporary files
+*.log
+*.bak
+*.tmp
+*.temp
 
-*.bak *.tmp *.DS_Store *.swp *.swo
+# Debug files
+debug/
+debug.test
+
+# Binary files
+bin/
+release/
+
+# Dependency directories
+vendor/
+
+# Local development
+*.local
