--- a/Master_Server/Dockerfile
+++ b/Master_Server/Dockerfile
@@ -1,29 +1,18 @@
-# **Step 1: Build Stage - Compiling Go Binary**
-FROM golang:1.22 AS builder  
-WORKDIR /app  
+# Build Stage
+FROM golang:1.22 AS builder
+WORKDIR /app
+COPY go.mod go.sum ./
+RUN go mod download
+COPY . .
+# Build with static linking
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o masterserver .
 
-# **Cache dependencies (faster builds)**
-COPY go.mod go.sum ./  
-RUN go mod download  
-
-# **Copy only source code (so it doesn't invalidate the cache)**
-COPY . .  
-
-# **Build the Go binary**
-RUN go build -o masterserver .  
-
-# **Step 2: Final Minimal Runtime Image**
-FROM alpine:latest  
-WORKDIR /app  
-
-# **Copy built binary from builder stage (keeps final image small)**
-COPY --from=builder /app/masterserver .  
-
-# **Ensure binary is executable**
-RUN chmod +x masterserver  
-
-# **Expose the gRPC port**
-EXPOSE 50052  
-
-# **Run the Master Server**
+# Final Stage
+FROM alpine:latest
+WORKDIR /app
+# Add required dependencies
+RUN apk --no-cache add ca-certificates
+COPY --from=builder /app/masterserver .
+RUN chmod +x masterserver
+EXPOSE 50052
 CMD ["./masterserver"]
