--- a/Chunk_Servers/chunk_server_3/docker-compose.yml
+++ b/Chunk_Servers/chunk_server_3/docker-compose.yml
@@ -3,13 +3,13 @@ services:
     build:
       context: .
       dockerfile: dockerfile
-    container_name: chunk_server_container
+    container_name: chunk_server_container_3
     ports:
-      - "50051:50051"
+      - "50054:50054"
     networks:
       - shared_file_network
     environment:
-      - SERVER_ID=chunk1
+      - SERVER_ID=chunk3
       - STORAGE_PATH=/data
       - MASTER_ADDRESS=master_server_container:50052  # Use container name
     volumes:
