--- a/Chunk_Servers/chunk_server_1/docker-compose.yml
+++ b/Chunk_Servers/chunk_server_1/docker-compose.yml
@@ -9,8 +9,9 @@ services:
     networks:
       - shared_file_network
     environment:
-      - SERVER_ID=chunk1
-      - STORAGE_PATH=/data
+      - SERVER_ID=chunk_server_1
+      - STORAGE_PATH=/chunk_server_1/data
+      - CHUNK_SERVER_ADDRESS=chunk_server_container:50051  # Use container name
       - MASTER_ADDRESS=master_server_container:50052  # Use container name
     volumes:
       - chunk_data:/data
