--- a/Chunk_Servers/chunk_server_2/docker-compose.yml
+++ b/Chunk_Servers/chunk_server_2/docker-compose.yml
@@ -9,9 +9,10 @@ services:
     networks:
       - shared_file_network
     environment:
-      - SERVER_ID=chunk2
-      - STORAGE_PATH=/data
-      - MASTER_ADDRESS=master_server_container:50052 
+      - SERVER_ID=chunk_server_2
+      - STORAGE_PATH=/chunk_server_2/data
+      - CHUNK_SERVER_ADDRESS=chunk_server_container:50053  # Use container name
+      - MASTER_ADDRESS=master_server_container:50052  # Use container name
     volumes:
       - chunk_data:/data
     command: ["/app/chunkserver"]
