--- a/Master_Server/docker-compose.yml
+++ b/Master_Server/docker-compose.yml
@@ -11,9 +11,28 @@ services:
     volumes:
       - master_data:/data
     command: ["./masterserver"]
+    depends_on:
+      - mongodb
+    environment:
+      - MONGO_URI=mongodb://mongodb:27017/gfs_db
+
+  mongodb:
+    image: mongo:7.0
+    container_name: master_server_mongodb_1
+    ports:
+      - "27017:27017"
+    networks:
+      - shared_file_network
+    volumes:
+      - mongo_data:/data/db
+    environment:
+      - MONGO_INITDB_DATABASE=gfs_db
+      # - MONGO_INITDB_ROOT_USERNAME=admin
+      # - MONGO_INITDB_ROOT_PASSWORD=secret
 
 volumes:
   master_data:
+  mongo_data:
 
 networks:
   shared_file_network:
